--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>4-API using TS</title>
   </head>
   <body>
-    <container class="row mt-5 justify-content-center">
-      <button class="btn btn-primary col-2" id="nextJoke">NEXT JOKE</button>
-      <p class="col-4 mx-3" id="joke"></p>
-    </container>
+    <div class="mx-3">
+      <div class="card text-center align-items-center justify-content-center shadow">
+        <h2 class="mt-3">Ready to laugh?<img class="card-img-top" src="/public/laugh.png" alt="emoji" /></h2>
+        <div class="card-body">
+          <p class="card-text mx-5" id="joke"></p>
+        </div>
+        <button class="btn btn-primary mt-5 mb-3" id="nextJoke">NEXT JOKE</button>
+      </div>
+    </div>
 
     <script type="module" src="src/main.ts"></script>
   </body>
