made fetchJoke a async function && create interface for the return type

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="mx-3">
       <div class="card text-center align-items-center justify-content-center shadow">
-        <h2 class="mt-3">Ready to laugh?<img class="card-img-top" src="/public/laugh.png" alt="emoji" /></h2>
+        <h2 class="mt-3">Ready to laugh?<img class="card-img-top" src="/laugh.png" alt="emoji" /></h2>
         <div class="card-body">
           <p class="card-text mx-5" id="joke"></p>
         </div>
