--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
   </head>
   <body>
     <div class="mx-3">
-      <div class="card text-center align-items-center justify-content-center shadow">
+      <div class="card text-center align-items-center shadow">
         <h2 class="mt-3">Ready to laugh?<img class="card-img-top" src="/laugh.png" alt="emoji" /></h2>
-        <div class="card-body">
+        <div class="card-body flex-grow-1">
           <p class="card-text mx-5" id="joke"></p>
         </div>
-        <button class="btn btn-primary mt-5 mb-3" id="nextJoke">NEXT JOKE</button>
+        <div class="mb-2">
+          <button id="score_1"><img class="score" src="/score_1.png" alt="1"></button>
+          <button id="score_2"><img class="score" src="/score_2.png" alt="2"></button>
+          <button id="score_3"><img class="score" src="/score_3.png" alt="3"></button>
+        </div>
+        <button class="btn btn-primary mb-3" id="nextJoke">NEXT JOKE</button>
       </div>
     </div>
 
