--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>4-API using TS</title>
   </head>
   <body>
+    <div class="card w-auto h-auto bg-primary align-items-center">
+      <img src="" alt="" id="weatherIco">
+      <p class="px-2 text-uppercase" id="weatherDesc"></p>
+      <p class="px-2 text-uppercase" id="weatherTemp"></p>
+    </div>
     <div class="mx-3">
       <div class="card text-center align-items-center shadow">
         <h2 class="mt-3">Ready to laugh?<img class="card-img-top" src="/laugh.png" alt="emoji" /></h2>
